--- a/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
@@ -16,22 +16,21 @@
                         <RowDefinition Height="2*"/>
                         <RowDefinition Height="400"/>
                     </Grid.RowDefinitions>
-                    <Image Grid.Row="0" x:Name="imgPueblo" Source="{Binding ImagenPrincipal}" 
-                               VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" 
-                               Aspect="AspectFill"/>
+                    <Image Grid.Row="0" x:Name="imgPueblo" Source="{Binding ImagenPrincipal}"
+                               Aspect="AspectFill" HeightRequest="150"/>
                     <Frame Grid.Row="1" CornerRadius="15" Padding="0">
                             <StackLayout>
                                 <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="5" Margin="10">
                                     <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="2*"/>
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
                                     <Entry Grid.Column="0" x:Name="txtNombre" TextColor="Black" Text="{Binding Nombre}" 
-                                Placeholder="Ingresa el nombre del pueblo" HorizontalOptions="Start"
-                                PlaceholderColor="LightGray" BackgroundColor="White" FontSize="Medium" FontFamily="BSDR"/>
+                                Placeholder="Ingresa el nombre del pueblo" HorizontalOptions="Start" FontSize="Large"
+                                PlaceholderColor="LightGray" BackgroundColor="White" FontFamily="BSDRegular" />
                                     <Button Grid.Column="1" x:Name="btnImagen" Text="Foto perfil" 
-                                BackgroundColor="Transparent" Margin="0" FontSize="Small"
-                                TextColor="Black" WidthRequest="90"  
+                                BackgroundColor="Transparent" Margin="0" FontSize="Medium"
+                                TextColor="Black" WidthRequest="90"  FontFamily="BSDRegular"
                                 HorizontalOptions="End" Clicked="BtnImagen_Clicked"/>
                                 </Grid>
                                 <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="0">
@@ -46,29 +45,29 @@
                                         <RowDefinition Height="*"/>
                                     </Grid.RowDefinitions>
                                     <Button x:Name="btnRutas" Text="Rutas"
-                                    BackgroundColor="White"
+                                    BackgroundColor="White" FontFamily="BSDRegular"
                                     TextColor="Black" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnRutas_Clicked" Grid.Column="0" Grid.Row="0" BorderColor="Gray"/>
-                                    <Label Text="Rutas" Grid.Column="0" Grid.Row="1" HorizontalOptions="Center"/>
+                                <Label Text="Rutas" FontSize="Large" Grid.Column="0" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                                     <Button x:Name="btnActividades" Text="Acts"
-                                    BackgroundColor="White" 
+                                    BackgroundColor="White" FontFamily="BSDRegular"
                                     TextColor="Black" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnActividades_Clicked" Grid.Column="1" Grid.Row="0" BorderColor="Gray"/>
-                                    <Label Text="Actividades" Grid.Column="1" Grid.Row="1" HorizontalOptions="Center"/>
+                                <Label Text="Actividades" FontSize="Large" Grid.Column="1" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                                     <Button x:Name="btnFotos" Text="Fotos"
                                     BackgroundColor="White" 
-                                    TextColor="Black" HorizontalOptions="FillAndExpand" 
+                                    TextColor="Black" HorizontalOptions="FillAndExpand" FontFamily="BSDRegular"
                                     Clicked="BtnFotos_Clicked" Grid.Column="2" Grid.Row="0" BorderColor="Gray"/>
-                                    <Label Text="Fotos" Grid.Column="2" Grid.Row="1" HorizontalOptions="Center"/>
+                                <Label Text="Fotos" FontSize="Large" Grid.Column="2" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                                     <Button x:Name="btnVideo" Text="Vídeos" 
                                     BackgroundColor="White" 
                                     TextColor="Black"  HorizontalOptions="FillAndExpand" 
-                                    Clicked="BtnVideo_Clicked" Grid.Column="3" Grid.Row="0" BorderColor="Gray"/>
-                                    <Label Text="Vídeos" Grid.Column="3" Grid.Row="1" HorizontalOptions="Center"/>
+                                    Clicked="BtnVideo_Clicked" Grid.Column="3" Grid.Row="0" BorderColor="Gray" FontFamily="BSDRegular"/>
+                                <Label Text="Vídeos" FontSize="Large"  Grid.Column="3" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular"/>
                                 </Grid>
-                                <Entry x:Name="txtDescripcion" TextColor="DarkGray" Text="{Binding Descripcion}" 
-                                Placeholder="Ingresa una descripción del pueblo"  Margin="10, 0, 10, 25" 
-                                PlaceholderColor="LightGray" BackgroundColor="White" FontSize="Medium"/>
+                                <Editor x:Name="txtDescripcion" TextColor="Black" Text="{Binding Descripcion}" 
+                                Placeholder="Ingresa una descripción del pueblo"  Margin="10, 0, 10, 25" AutoSize="TextChanges"
+                                PlaceholderColor="LightGray" BackgroundColor="White" FontSize="Large" FontFamily="BSDRegular"/>
                             </StackLayout>
                         </Frame>
                         <!--<Label Text="Coordenadas del pueblo(Latitud, Longitud): " TextColor="Gray" FontSize="Medium"/>
@@ -91,9 +90,9 @@
                     <StackLayout Grid.Row="2" x:Name="stackMapa" Margin="0, 0, 0, 0" HeightRequest="-1" WidthRequest="-1">
                         <maps:Map x:Name="map" WidthRequest="-1" HeightRequest="300" HasScrollEnabled="True"/>
                         <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="5">
-                            <Button Text="Street" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Black" />
-                            <Button Text="Satélite" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Black" />
-                            <Button Text="Híbrido" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Black" />
+                            <Button Text="Street" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Black" FontFamily="BSDRegular"/>
+                            <Button Text="Satélite" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Black" FontFamily="BSDRegular"/>
+                            <Button Text="Híbrido" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="White" TextColor="Black" FontFamily="BSDRegular"/>
                         </StackLayout>
                     </StackLayout>
                 </Grid>
